# dionysus

./: .build.yml  .bumpversion.cfg  .gitignore  .hgignore  .hgsubtree  .travis.yml  CMakeLists.txt  LEGAL.txt  LICENSE.txt  MANIFEST.in  NOTICES.txt  README.rst  build-wheels.sh  environment.yml  peru.yaml  pyproject.toml  requirements.txt  setup.py
bindings/python/: CMakeLists.txt  bottleneck-distance.cpp  boundary.cpp  chain.h  cohomology-persistence.cpp  cohomology-persistence.h  diagram.cpp  diagram.h  dionysus.cpp  distances.cpp  field.cpp  field.h  filtration.cpp  filtration.h  freudenthal.cpp  omni-field-persistence.cpp  omni-field-persistence.h  persistence.cpp  persistence.h  progress.h  rips.cpp  simplex.cpp  simplex.h  wasserstein-distance.cpp  zigzag-persistence.cpp  zigzag-persistence.h
bindings/python/dionysus/: __init__.py  _version.py  plot.py  zigzag.py
bindings/python/pybind11/docs/: requirements.txt
bindings/python/pybind11/tests/: requirements.txt
doc/: API.rst  Makefile  conf.py  index.rst  tutorial.rst
doc/tutorial/: alpha-shapes.rst_  basics.rst  cohomology.rst  diagnostics.rst  fast-zigzag-apex.rst  filtrations.rst  index.rst  lower-star.rst  omni-field.rst  persistence.rst  plotting.rst  rips.rst  zigzags.rst
examples/: CMakeLists.txt
examples/filtration/: CMakeLists.txt  filtration-persistence.cpp  zigzag-filtration-persistence.cpp
examples/include/opts/: opts.h
examples/lzz/: CMakeLists.txt  extended-persistence.cpp  grid-topology.h  relative-lzz.cpp  relative-lzz.h  relative-lzz.hpp  relative-zz-filtration.cpp
examples/omni-field/: CMakeLists.txt  omni-field-persistence.cpp
examples/python/: matrix-v.py  no-negative.py  zigzag.py
examples/rips/: CMakeLists.txt  rips-basic.cpp  rips-pairwise.cpp  rips-zigzag.cpp
ext/hera/: license.txt
ext/hera/bottleneck/: CMakeLists.txt  README  bottleneck_dist.cpp
ext/hera/bottleneck/example/: bottleneck_dist.cpp
ext/hera/bottleneck/include/: basic_defs_bt.h  bottleneck.h  bottleneck_detail.hpp  diagram_reader.h  diagram_traits.h
ext/hera/bottleneck/include/dnn/parallel/: tbb.h
ext/hera/include/hera/: bottleneck.h  common.h  matching_distance.h  wasserstein.h  wasserstein_pure_geom.hpp
ext/hera/include/hera/bottleneck/: basic_defs_bt.h  bottleneck_detail.h  bottleneck_detail.hpp  bound_match.hpp  neighb_oracle.h
ext/hera/include/hera/common/: diagram_point.h  diagram_reader.h  diagram_traits.h  hash_combine.h  infinity.h  point.h
ext/hera/include/hera/dnn/: utils.h
ext/hera/include/hera/dnn/geometry/: euclidean-dynamic.h  euclidean-fixed.h
ext/hera/include/hera/dnn/local/: kd-tree.h  kd-tree.hpp  search-functors.h
ext/hera/include/hera/dnn/parallel/: tbb.h  utils.h
ext/hera/include/hera/wasserstein/: auction_oracle.h  auction_oracle_base.hpp  auction_oracle_kdtree_pure_geom.h  auction_oracle_kdtree_pure_geom.hpp  auction_oracle_kdtree_restricted.h  auction_oracle_kdtree_restricted.hpp  auction_oracle_lazy_heap.h  auction_oracle_lazy_heap.hpp  auction_params.h  auction_result.h  auction_runner_gs.h  auction_runner_gs.hpp  auction_runner_jac.h  auction_runner_jac.hpp  basic_defs_ws.h  basic_defs_ws.hpp  def_debug_ws.h
ext/hera/wasserstein/: CMakeLists.txt  README  wasserstein_dist.cpp  wasserstein_dist_dipha.cpp  wasserstein_dist_point_cloud.cpp
ext/hera/wasserstein/example/: wasserstein_dist.cpp
ext/hera/wasserstein/include/: auction_oracle.h  auction_oracle_base.h  auction_oracle_kdtree_pure_geom.h  auction_oracle_kdtree_pure_geom.hpp  auction_oracle_kdtree_restricted.h  auction_oracle_kdtree_restricted.hpp  auction_oracle_stupid_sparse_restricted.h  auction_oracle_stupid_sparse_restricted.hpp  auction_runner_fr.h  auction_runner_fr.hpp  auction_runner_gs.h  auction_runner_jac.h  basic_defs_ws.h  def_debug_ws.h  wasserstein.h
ext/hera/wasserstein/include/dnn/: utils.h
ext/hera/wasserstein/include/dnn/geometry/: euclidean-dynamic.h  euclidean-fixed.h
ext/hera/wasserstein/include/dnn/local/: kd-tree.h  kd-tree.hpp  search-functors.h
ext/hera/wasserstein/include/dnn/parallel/: tbb.h  utils.h
ext/hera/wasserstein/src/: auction_oracle.cpp  auction_runner_gs.cpp  auction_runner_jac.cpp  basic_defs.cpp  wasserstein.cpp
ext/hera/wasserstein/tests/: test_hera_wasserstein.cpp
include/dionysus/: chain.h  chain.hpp  clearing-reduction.h  clearing-reduction.hpp  cohomology-persistence.h  cohomology-persistence.hpp  diagram.h  filtration.h  linked-multi-filtration.h  matrix-filtration.h  multi-filtration.h  omni-field-persistence.h  omni-field-persistence.hpp  ordinary-persistence.h  pair-recorder.h  reduced-matrix.h  reduced-matrix.hpp  reduction.h  relative-homology-zigzag.h  relative-homology-zigzag.hpp  rips.h  rips.hpp  row-reduction.h  row-reduction.hpp  simplex.h  sparse-row-matrix.h  sparse-row-matrix.hpp  standard-reduction.h  standard-reduction.hpp  trails-chains.h  zigzag-persistence.h  zigzag-persistence.hpp
include/dionysus/dlog/: progress.h
include/dionysus/fields/: q.h  zp.h
testing/: environment_no_python.yml
tests/: test-issue72.py  test_distances.py  test_issue39.py  test_issue47.py  test_issueTBD.py
tests/data/issue39/: dgm1.txt  dgm2.txt
