[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "dionysus"
version = "2.1.8"

authors = [ { name = "Dmitriy Morozov",  email = "dmitriy@mrzv.org" } ]
description= "Library for computing persistent homology"
readme = "README.rst"
license = "BSD-3-Clause-LBNL"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "intervaltree>=3.1.0",
    "numpy>=2",
]
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/mrzv/dionysus"
Documentation = "https://www.mrzv.org/software/dionysus2"
Repository = "https://github.com/mrzv/dionysus.git"
Issues = "https://github.com/mrzv/dionysus/issues"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" },
              { file = "bindings/**" },
              { file = "include/**" },
              { file = "src/**" },
              { file = "ext/**" },
              { file = "CMakeLists.txt" }]

[dependency-groups]
doc = [
    "nb2plots>=0.7.2",
    "scipy>=1.13.1",
    "sphinx>=7.4.7",
]
test = [
    "matplotlib>=3.9.4",
    "pytest>=8.4.2",
]
