add_executable              (filtration-persistence     filtration-persistence.cpp)
target_link_libraries       (filtration-persistence     ${libraries})

add_executable              (zigzag-filtration-persistence     zigzag-filtration-persistence.cpp)
target_link_libraries       (zigzag-filtration-persistence     ${libraries})
